This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
5/28/23: Added ability to include a file into a Python script.

5/28/23: Added support for CEOS energy filter.

5/25/23: Added navigator menu option to determine whether peak erasing is done
for Realign to Item in Low Dose mode.

5/25/23: Fixed diffraction focus for Hitachi to access the right lens and
added difraction shift functions.

5/24/23: Added script command to turn off Acquire for Navigator points too
close to a supllied boundary or the convex hull of the points.

5/24/23: Changed installer in anticipation for when FrameGPU4.dll is no longer
included in the package, which will occur on the next substantive change in
the FrameGPU code.

5/18/23: Fixed default disabling of peak erasing in Realign to Item.

5/18/23: Made RestoreBeamTilt restore astigmatism also if saved (In 4.0).

5/17/23: Fixed StartNavAcquireAtEnd from when run from Python (In 4.0).

5/17/23: Added ability to lower or raise screen in STEM just for a JEOL
detector below the screen, to protect camera below.

5/12/23: Added property to prevent montage correlations from using background
thread.

5/12/23: Added script commands to copy low dose area parameters, report vacuum
status as 0-2 for FEI scopes, and end Navigator acquire at items.  Fixed
SetupPolygonMontage when first entry is not 0.

5/11/23: SEM_4-1-0beta16
5/11/23: Made sure the pattern assigned when multiple holes are combined
overrides the Hex grid option setting.

5/11/23: Fixed skipping of Advanced Scripting for AreDewarsFilling and
refilling refrigerant.

5/10/23: Improved handling of blanking during transients for mag and spot
changes and normalizations (In 4.0).

5/10/23: Increased limits for deferring log updates so the log is updated