@@ -292,6 +292,7 @@ BOOL_PROP_TEST("UseInvertedMagRange", scope->, UseInvertedMagRange)
 BOOL_PROP_TEST("ConstantBrightnessInNano", scope->, ConstantBrightInNano)
 INT_PROP_TEST("MinInitializeJeolDelay", scope->, MinInitializeJeolDelay)
 INT_PROP_TEST("UseUtapiScripting", scope->, UseUtapiScripting)
+BOOL_PROP_TEST("UseFilterInTEMMode", scope->, UseFilterInTEMMode)
 FLOAT_PROP_TEST("HitachiZMicronsPerGroove", mWinApp->mComplexTasks->, ZMicronsPerDialMark)
 INT_PROP_TEST("HitachiSpotStepDelay", scope->, HitachiSpotStepDelay)
 INT_PROP_TEST("HitachiDoesBSforISflags", scope->, HitachiDoesBSforIS)
