@@ -1340,6 +1340,11 @@
              3.9.0 1/28/21, this property is not needed for a Falcon 4 camera with 'GIF 1' set since it is set automatically.
           </TD>
         </TR>
+        <TR VALIGN="top">
+          <TD>UseFilterInTEMMode</TD>
+          <TD>Set to 1 to use the filter in TEM mode and prevent switching the microscope 
+            into EFTEM or GIF mode when the program&#39;s EFTEM mode is set.</TD>
+        </TR>
       </TABLE>
       <BR>
       <P><A NAME="per_camera_properties"></A><B>Properties for one camera</B>
